# RubiksCubeSolve

./: CMakeLists.txt  README.md  RubiksCube1darray.cpp  RubiksCube3darray.cpp  RubiksCubeBitboard.cpp  genericRubiksCube.cpp  genericRubiksCube.h  main.cpp
Models/: RubiksCube1darray.cpp  RubiksCube3darray.cpp  RubiksCubeBitboard.cpp  genericRubiksCube.cpp  genericRubiksCube.h
PatternDatabases/: CornerDBMaker.cpp  CornerDBMaker.h  CornerPatternDatabase.cpp  CornerPatternDatabase.h  NibbleArray.cpp  NibbleArray.h  PatternDatabase.cpp  PatternDatabase.h  PermutationIndexer.h  math.cpp  math.h
Solver/: BFSSOLVER.h  DFSSOLVER.h  IDAstarSOLVER.h  IDDFSSolver.h
